--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,63 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/main"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="16dp">
+    android:layout_height="match_parent">
 
+    <!-- Toolbar -->
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:title="GPS Location"
+        android:theme="?android:attr/actionBarTheme"/>
+
+    <!-- TextView per mostrare la posizione -->
     <TextView
         android:id="@+id/textViewLocation"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Posizione: Non definita"
+        android:text="Posizione: Non disponibile"
         android:textSize="18sp"
-        android:textStyle="bold"
-        android:textAlignment="center"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="24dp"/>
+        android:layout_below="@id/toolbar"
+        android:layout_marginTop="20dp"/>
 
+    <!-- Pulsante per aggiornare la posizione -->
     <Button
         android:id="@+id/buttonUpdateLocation"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Aggiorna Posizione"
-        app:layout_constraintTop_toBottomOf="@id/textViewLocation"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp"/>
+        android:layout_below="@id/textViewLocation"
+        android:layout_marginTop="20dp"
+        android:layout_centerHorizontal="true"/>
 
+    <!-- Pulsante per avviare la condivisione della posizione -->
     <Button
-        android:id="@+id/buttonStartSharing"
-        android:layout_width="0dp"
+        android:id="@+id/buttonStartConnection"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Avvia Condivisione"
-        app:layout_constraintTop_toBottomOf="@id/buttonUpdateLocation"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp"/>
+        android:text="Avvia connessione"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp"/>
 
+    <!-- Pulsante per fermare la condivisione della posizione -->
     <Button
         android:id="@+id/buttonStopSharing"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Ferma Condivisione"
-        app:layout_constraintTop_toBottomOf="@id/buttonStartSharing"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp"/>
+        android:layout_marginTop="20dp"
+        android:layout_centerHorizontal="true"/>
 
+    <!-- Pulsante per condividere la posizione sui social -->
     <Button
         android:id="@+id/buttonShareSocial"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Condividi sui Social"
-        app:layout_constraintTop_toBottomOf="@id/buttonStopSharing"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp"/>
+        android:text="Condividi Posizione"
+        android:layout_below="@id/buttonStopSharing"
+        android:layout_marginTop="20dp"
+        android:layout_centerHorizontal="true"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
